// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`put effect can trigger another effect 1`] = `
<div
  onClick={[Function]}
>
  <div>
    2
  </div>
</div>
`;

exports[`useFetch plugin 1`] = `
<div
  onClick={[Function]}
>
  <div>
    target
  </div>
</div>
`;
